trend_library detail
trend_library detail  767 해야함

--- a/kor/main/index.html
+++ b/kor/main/index.html
@@ -792,7 +792,7 @@ include "../../include/dbconn.html";
                             pin: true,
                             scrub: 1,
                             // invalidateOnRefresh: true,
-                            // markers: true
+                            markers: true
                         },
                     });
                     tl.to(".img_01 img:first-child", {
