--- a/kor/trend_library/list_detail.html
+++ b/kor/trend_library/list_detail.html
@@ -141,9 +141,12 @@ include "../../include/dbconn.html";
         <section>
             <article>
                 <div class="sec_tit">
+                    <div class="mo_tit">
+                        <h2>nowLoction</h2>
+                    </div>
                     <div class="nav_location">
                         <h2>Trend Library</h2>
-                        <h2>2번쨰 페이지</h2>
+                        <h2>nowLoction</h2>
                     </div>
                 </div>
 
